--- a/templates/Front/travel.html.twig
+++ b/templates/Front/travel.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "Front/baseO.html.twig" %}
 {% block head %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
