--- a/templates/Front/Forum/Forum_details.html.twig
+++ b/templates/Front/Forum/Forum_details.html.twig
@@ -41,100 +41,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="Forum/css/styles.css" rel="stylesheet" />
 {% endblock %}
- {% block header %}
-<!-- Responsive navbar-->
-<header class="header" style="padding-top: 72px;">
-    <!-- Navbar-->
-    <nav class="navbar navbar-expand-lg fixed-top shadow navbar-light bg-white">
-        <div class="container-fluid">
-            <div class="d-flex align-items-center"><a class="navbar-brand py-1" href="{{ path('home') }}"><img class="logo"
-                            src="{{ asset('img/logo_eventum.svg') }}" alt="Directory logo"></a>
-                <form class="form-inline d-none d-sm-flex" action="#" id="search">
-                    <div class="input-label-absolute input-label-absolute-left input-reset input-expand ml-lg-2 ml-xl-3">
-                        <label class="label-absolute" for="search_search"><i class="fa fa-search"></i><span
-                                    class="sr-only">What are you looking for?</span></label>
-                        <input class="form-control form-control-sm border-0 shadow-0 bg-gray-200"
-                               id="search_search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-reset btn-sm" type="reset"><i class="fa-times fas"></i></button>
-                    </div>
-                </form>
-            </div>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                    data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                    aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
-            <!-- Navbar Collapse -->
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <form class="form-inline mt-4 mb-2 d-sm-none" action="#" id="searchcollapsed">
-                    <div class="input-label-absolute input-label-absolute-left input-reset w-100">
-                        <label class="label-absolute" for="searchcollapsed_search"><i
-                                    class="fa fa-search"></i><span
-                                    class="sr-only">What are you looking for?</span></label>
-                        <input class="form-control form-control-sm border-0 shadow-0 bg-gray-200"
-                               id="searchcollapsed_search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-reset btn-sm" type="reset"><i class="fa-times fas"> </i></button>
-                    </div>
-                </form>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown ml-lg-3"><a id="userDropdownMenuLink" href="#"
-                                                             data-toggle="dropdown" aria-haspopup="true"
-                                                             aria-expanded="false"> <img
-                                    class="avatar avatar-sm avatar-border-white mr-2"
-                                    src="{{ asset('img/avatar/avatar-10.jpg') }}" alt="Jack London"></a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdownMenuLink"><a
-                                    class="dropdown-item" href="{{ path('error') }}">Profile
-                            </a><a class="dropdown-item" href="{{ path('error') }}">Dark Mode
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{{ path('error') }}"><i
-                                        class="fas fa-sign-out-alt mr-2 text-muted"></i> Sign out</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="nav-link " id="homeDropdownMenuLink"
-                                                     href="index.html"
-                                                     data-toggle="dropdown" aria-haspopup="true"
-                                                     aria-expanded="false">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                 class="bi bi-translate" viewBox="0 0 16 16">
-                                <path d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"/>
-                                <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"/>
-                            </svg>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="homeDropdownMenuLink">
-                            <a class="dropdown-item" href="index.html">English<span><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                            fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16">
-  <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
-  <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
-</svg></span></a>
-                            <a class="dropdown-item" href="index-2.html">Frensh</a>
-                            <a class="dropdown-item" href="index-3.html">Add language</a>
-                            <a class="dropdown-item" href="index-4.html">See all Language
-                            </a>
 
-                        </div>
-                    </li>
-
-                    <li class="nav-item"><a class="nav-link" href="{{ path('inbox') }}">Messages</a>
-                    </li>
-
-                    <!-- Megamenu-->
-
-                    <!-- /Megamenu end
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
-                    </li>
--->
-                    <li class="nav-item"><a class="nav-link" href="#">Bookmarks</a>
-                    </li>
-
-                    <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block"><a
-                                class="btn btn-primary" href="{{ path('addFSt') }}">Start New Topic</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- /Navbar -->
-</header>
- {% endblock %}
 {% block content %}
 <!-- Page content-->
 <div class="container mt-5">
@@ -149,8 +56,8 @@
                     <!-- Post meta content-->
                     <div class="text-muted fst-italic mb-2">Posted on January 1, 2021 by Start Bootstrap</div>
                     <!-- Post categories-->
-                    <a class="badge bg-secondary text-decoration-none link-light" href="{{ path('edit',{'id':id}) }}">Edit</a>
-                    <a class="badge bg-secondary text-decoration-none link-light" href="{{ path('delete',{'id':id}) }}">Delete</a>
+                    <a class="badge bg-secondary text-decoration-none link-light" href="{{ path('edit',{'id':id,'lang':lang}) }}">Edit</a>
+                    <a class="badge bg-secondary text-decoration-none link-light" href="{{ path('delete',{'id':id,'lang':lang}) }}">Delete</a>
                 </header>
                 <!-- Preview image figure-->
                 <figure class="mb-4"><img class="img-fluid rounded" src="#" alt="..." /></figure>
