--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -16,7 +16,7 @@
                             <img style=" display: block;
                       margin-left: auto;
                       margin-right: auto;
-                      width: 50%;"  src="{{ asset( 'upload/'~event.image)}}"  />
+                      width: 50%;"  src=""  />
                             <tbody>
                             <tr>
                                 <th>Id</th>
