--- a/templates/base-back.html.twig
+++ b/templates/base-back.html.twig
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ asset('assets/css/search.css')}}">
     <link rel="stylesheet" href="{{ asset('assets/vendors/mdi/css/materialdesignicons.min.css')}}">
     <link rel="stylesheet" href="{{ asset('assets/vendors/css/vendor.bundle.base.css')}}">
+    <link rel="stylesheet" href="{{ asset("css/slide.css") }}">
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <link rel="stylesheet" href="{{ asset('assets/vendors/jvectormap/jquery-jvectormap.css')}}">
@@ -133,7 +134,7 @@
               <span class="menu-icon">
                 <i class="mdi mdi-table-large"></i>
               </span>
-                    <span class="menu-title">Gestion camping</span>
+                    <span class="menu-title">Gestion prduit</span>
                 </a>
             </li>
             <li class="nav-item menu-items">
@@ -163,65 +164,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav navbar-nav-right">
-                    <li class="nav-item dropdown d-none d-lg-block">
-                        <a type="button" class="btn btn-warning btn-fw" id="createbuttonDropdown" data-toggle="dropdown" aria-expanded="false" href="#">+ Ajouter</a>
-                        <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="createbuttonDropdown">
 
-                            <a class="dropdown-item preview-item" href="/ajoututili">
-                                <div class="preview-thumbnail">
-                                    <div class="preview-icon bg-dark rounded-circle">
-                                        <i class="mdi mdi-file-outline text-primary"></i>
-                                    </div>
-                                </div>
-                                <div class="preview-item-content">
-                                    <p class="preview-subject ellipsis mb-1">Partenaire</p>
-                                </div>
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item preview-item" href="/ajoutprod">
-                                <div class="preview-thumbnail">
-                                    <div class="preview-icon bg-dark rounded-circle">
-                                        <i class="mdi mdi-web text-info"></i>
-                                    </div>
-                                </div>
-                                <div class="preview-item-content">
-                                    <p class="preview-subject ellipsis mb-1">Produit</p>
-                                </div>
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item preview-item"  href="{{ path('event_new') }}">
-                                <div class="preview-thumbnail">
-                                    <div class="preview-icon bg-dark rounded-circle">
-                                        <i class="mdi mdi-layers text-danger"></i>
-                                    </div>
-                                </div>
-                                <div class="preview-item-content">
-                                    <p class="preview-subject ellipsis mb-1">Évènement</p>
-                                </div>
-                            </a>
-                            <a class="dropdown-item preview-item" href="/ajoutvoy">
-                                <div class="preview-thumbnail">
-                                    <div class="preview-icon bg-dark rounded-circle">
-                                        <i class="mdi mdi-file-outline text-primary"></i>
-                                    </div>
-                                </div>
-                                <div class="preview-item-content">
-                                    <p class="preview-subject ellipsis mb-1">Voyage</p>
-                                </div>
-                            </a>
-                            <a class="dropdown-item preview-item" href="/ajoutcamp">
-                                <div class="preview-thumbnail">
-                                    <div class="preview-icon bg-dark rounded-circle">
-                                        <i class="mdi mdi-file-outline text-primary"></i>
-                                    </div>
-                                </div>
-                                <div class="preview-item-content">
-                                    <p class="preview-subject ellipsis mb-1">Camping</p>
-                                </div>
-                            </a>
-
-                        </div>
-                    </li>
                     <li class="nav-item nav-settings d-none d-lg-block">
                         <a class="nav-link" href="#">
                             <i class="mdi mdi-view-grid"></i>
@@ -396,6 +339,8 @@
 <script src="{{ asset('assets/js/search.js')}}"></script>
 <script src="{{ asset('js/charts-custom.js')}}"></script>
 <script src="{{ asset('assets/js/dashboard.js')}}"></script>
+<script src="{{ asset('js/images.js') }}"></script>
+<script src="{{ asset('js/slide.js') }}"></script>
 <!-- End custom js for this page -->
 </body>
 </html>
