--- a/templates/base_front.html.twig
+++ b/templates/base_front.html.twig
@@ -10,6 +10,7 @@
         <meta name="robots" content="all,follow">
         <!-- Price Slider Stylesheets -->
         <link rel="stylesheet" href="{{ asset("vendor/nouislider/nouislider.css") }}">
+        <link rel="stylesheet" href="{{ asset("css/slide.css") }}">
         <!-- Google fonts - Playfair Display-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700">
         <!-- Google fonts - Poppins-->
@@ -322,10 +323,12 @@
 <script>var basePath = ''</script>
 <!-- Main Theme JS file    -->
 <script src="{{ asset('js/theme.js') }}"></script>
+<script src="{{ asset('js/slide.js') }}"></script>
 <!-- Daterange picker-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"> </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-date-range-picker/0.19.0/jquery.daterangepicker.min.js"> </script>
 <script src="{{ asset('js/datepicker-category.js') }}"> </script>
+<script src="{{ asset('js/images.js') }}"></script>
 <!-- Price Slider-->
 <script src="{{ asset('vendor/nouislider/nouislider.min.js') }}"></script>
 </body>
