--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -41,7 +41,7 @@
                                         <td>{{ event.dateFin ? event.dateFin|date('Y-m-d') : '' }}</td>
                                         <td>{{ event.lieu }}</td>
                                         <td>{{ event.prix }}</td>
-                                        <td><label class="badge badge-danger"> <a href="{{ path('event_delete', {'id': event.id}) }}"><i class="mdi mdi-delete"></i></a></label><label class="badge badge-info"><a href="{{ path('event_edit', {'id': event.id}) }}"><i class="mdi mdi-table-edit"></i></a></label><label class="badge badge-warning"><a href="{{ path('event_show', {'id': event.id}) }}"><i class="mdi mdi-information-outline"></i></a></label></td>
+                                        <td><label class="badge badge-danger"> <a href="{{ path('event_delete', {'id': event.id}) }}"><i class="mdi mdi-delete"></i></a></label><label class="badge badge-info"><a href="{{ path('annonces_edit', {'id': event.id}) }}"><i class="mdi mdi-table-edit"></i></a></label><label class="badge badge-warning"><a href="{{ path('event_show', {'id': event.id}) }}"><i class="mdi mdi-information-outline"></i></a></label></td>
 
                                     </tr>
 
