--- a/templates/produit/afficherProduits.html.twig
+++ b/templates/produit/afficherProduits.html.twig
@@ -1,66 +1,185 @@
 {% extends 'base-back.html.twig' %}
 
 {% block body %}
-    <div class="page-header">
-        <div class="container-fluid">
-            <h2 style="color:#ffa500" class="h5 no-margin-bottom">Gestion des Produits</h2>
-        </div>
-    </div>
-    <button class="btn btn-success btn-icon-split" ><a href="{{ path('ajoutproduit')  }}"><span class="text" style=""color:white>Ajouter </span></a></button>
-
-    <br><br>
 
 
-    <table class="table table-bordered" id="t"  width="100%" cellspacing="0">
-        <thead>
-        <tr>
-            <th>  </th>
-            <th>  </th>
-            <th>id  </th>
-            <th>nom	 </th>
-            <th>desciption </th>
-            <th> prix</th>
-            <th>stock</th>
-            <th>image</th>
-        </tr>
-        </thead>
+    <section>
+        <section>
+            <div class="page-header">
+                <div class="container-fluid">
+                    <h2 style="color:#ffa500" class="h5 no-margin-bottom">Gestion des Produits</h2>
+                </div>
+            </div>
+            <br><br><br>
+            <p style="100px" > <input  id="myInput"  type="text" placeholder="search">
 
-        <tbody id="hi">
+                <br><br>
 
+        </section>
+        <button class="btn btn-success btn-icon-split" ><a href="{{ path('ajoutproduit')  }}"><span class="text" style=""color:white>Ajouter </span></a></button>
 
-        {% for i in tableproduits %}
+        <table class="table table-bordered" id="t"  width="100%" cellspacing="0">
+            <thead>
             <tr>
+                <th>  </th>
+                <th>  </th>
+                <th>id  </th>
+                <th>nom	 </th>
+                <th>desciption </th>
+                <th> prix</th>
+                <th>stock</th>
+                <th>image</th>
+            </tr>
+            </thead>
 
-                <td>  <a href="{{ path('modifierproduit',{'id': i.id}) }}"  class="btn btn-info btn-icon-split">
+            <tbody >
+            <tbody id="myTable">
+
+            {% for i in tableproduits %}
+                <tr>
+
+                    <td>  <a href="{{ path('modifierproduit',{'id': i.id}) }}"  class="btn btn-info btn-icon-split">
                                             <span class="icon text-white-50">
                         <i class="fas fa-info-circle"></i>
 
                     </span>
-                        <span class="text">Modifier</span>
+                            <span class="text">Modifier</span>
 
-                    </a></td>
+                        </a></td>
 
-                <td><a href="{{ path('supprimerproduit',{'id': i.id}) }}"><img src="https://img.icons8.com/color/48/000000/trash--v2.png"/></a></td>
+                    <td><a href="{{ path('supprimerproduit',{'id': i.id}) }}"><img src="https://img.icons8.com/color/48/000000/trash--v2.png"/></a></td>
 
-                <td>{{ i.id  }}</td>
-                <td>{{ i.nom }}</td>
-                <td>{{ i.desciption }}</td>
-                <td>{{ i.prix  }}</td>
+                    <td>{{ i.id  }}</td>
+                    <td>{{ i.nom }}</td>
+                    <td>{{ i.desciption }}</td>
+                    <td>{{ i.prix  }}</td>
 
-                <td>{{ i.stock	  }}</td>
-                <td><img src="{{ asset('/back/images/')}}{{ i.image }}" width="100"  /></td>
+                    <td>{{ i.stock	  }}</td>
+                    <td><img src="{{ asset('/back/images/')}}{{ i.image }}" width="100"  /></td>
 
+                </tr>
+
+            {% endfor %}
+
+
+            </tbody>
+            <tbody id="search">
+            </tbody>
+
+        </table>
+        {{ knp_pagination_render(tableproduits) }}
+
+
+
+    </section>
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#myInput").on("keyup", function() {
+                var value = $(this).val().toLowerCase();
+                $("#myTable tr").filter(function() {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            });
+        });
+    </script>
+
+{% endblock %}
+
+
+
+{% extends 'base-back.html.twig' %}
+
+{% block body %}
+
+
+    <section>
+        <section>
+            <div class="page-header">
+                <div class="container-fluid">
+                    <h2 style="color:#ffa500" class="h5 no-margin-bottom">Gestion des Produits</h2>
+                </div>
+            </div>
+            <br><br><br>
+            <p style="100px" > <input  id="myInput"  type="text" placeholder="search">
+
+                <br><br>
+
+        </section>
+        <button class="btn btn-success btn-icon-split" ><a href="{{ path('ajoutproduit')  }}"><span class="text" style=""color:white>Ajouter </span></a></button>
+
+        <table class="table table-bordered" id="t"  width="100%" cellspacing="0">
+            <thead>
+            <tr>
+                <th>  </th>
+                <th>  </th>
+                <th>id  </th>
+                <th>nom	 </th>
+                <th>desciption </th>
+                <th> prix</th>
+                <th>stock</th>
+                <th>image</th>
             </tr>
+            </thead>
 
-        {% endfor %}
+            <tbody >
+            <tbody id="myTable">
+
+            {% for i in tableproduits %}
+                <tr>
+
+                    <td>  <a href="{{ path('modifierproduit',{'id': i.id}) }}"  class="btn btn-info btn-icon-split">
+                                            <span class="icon text-white-50">
+                        <i class="fas fa-info-circle"></i>
+
+                    </span>
+                            <span class="text">Modifier</span>
+
+                        </a></td>
+
+                    <td><a href="{{ path('supprimerproduit',{'id': i.id}) }}"><img src="https://img.icons8.com/color/48/000000/trash--v2.png"/></a></td>
+
+                    <td>{{ i.id  }}</td>
+                    <td>{{ i.nom }}</td>
+                    <td>{{ i.desciption }}</td>
+                    <td>{{ i.prix  }}</td>
+
+                    <td>{{ i.stock	  }}</td>
+                    <td><img src="{{ asset('/back/images/')}}{{ i.image }}" width="100"  /></td>
+
+                </tr>
+
+            {% endfor %}
 
 
-        </tbody>
-        <tbody id="search">
-        </tbody>
+            </tbody>
+            <tbody id="search">
+            </tbody>
 
-    </table>
-    {{ knp_pagination_render(tableproduits) }}
+        </table>
+        {{ knp_pagination_render(tableproduits) }}
+
+
+
+    </section>
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#myInput").on("keyup", function() {
+                var value = $(this).val().toLowerCase();
+                $("#myTable tr").filter(function() {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            });
+        });
+    </script>
+
 {% endblock %}
 
 
