--- a/templates/Front/Forum/Forum_details.html.twig
+++ b/templates/Front/Forum/Forum_details.html.twig
@@ -155,10 +155,12 @@
                                                                 src="https://dummyimage.com/50x50/ced4da/6c757d.jpg"
                                                                 alt="..."/></div>
                                 <div class="ms-3">
-
-                                    <div class="fw-bold">Commenter Name</div>
+{% set idc=item.id %}
+                                    <div class="fw-bold">{{ item.poster.login }}</div>
                                     {{ item.content }} <a class="badge bg-secondary text-decoration-none link-light"
-                                                          href="{{ path('delete',{'id':id,'lang':lang}) }}">Delete</a>
+                                                          href="{{ path('editC',{'idc':idc,'lang':lang,'idt':id}) }}">Modifier</a>
+                                    <a class="badge bg-secondary text-decoration-none link-light"
+                                       href="{{ path('deleteC',{'idc':idc,'lang':lang,'idt':id}) }}">Delete</a>
 
                                     {% endfor %}
                                     <!-- Child comment 1-->
@@ -206,29 +208,12 @@
                             </form>
                         </div>
                     </div> -->
-                                    <!-- Child comment 2-->
-                                    <div class="d-flex mt-4">
-                                        <div class="flex-shrink-0"><img class="rounded-circle"
-                                                                        src="https://dummyimage.com/50x50/ced4da/6c757d.jpg"
-                                                                        alt="..."/></div>
-                                        <div class="ms-3">
-                                            <div class="fw-bold">Commenter Name</div>
-                                            When you put money directly to a problem, it makes a good headline.
-                                        </div>
-                                    </div>
+
+
                                 </div>
                             </div>
                             <!-- Single comment-->
-                            <div class="d-flex">
-                                <div class="flex-shrink-0"><img class="rounded-circle"
-                                                                src="https://dummyimage.com/50x50/ced4da/6c757d.jpg"
-                                                                alt="..."/></div>
-                                <div class="ms-3">
-                                    <div class="fw-bold">Commenter Name</div>
-                                    When I look at the universe and all the ways the universe wants to kill us, I find
-                                    it hard to reconcile that with statements of beneficence.
-                                </div>
-                            </div>
+
                         </div>
                     </div>
                 </section>
