--- a/templates/Front/Forum/discussion.html.twig
+++ b/templates/Front/Forum/discussion.html.twig
@@ -80,83 +80,57 @@
     <div class="container">
         <!-- Breadcrumbs -->
         <ol class="breadcrumb pl-0  justify-content-start">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item"><a href="user-messages.html">Inbox</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Forum</a></li>
+            <li class="breadcrumb-item"><a href="{{ path('inbox', {'lang': lang}) }}">Inbox</a></li>
             <li class="breadcrumb-item active">Your messages with Anna   </li>
         </ol>
         <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center mb-4">
             <h1 class="mb-3 mb-md-0 hero-heading mb-0">Your messages with Anna</h1>
-            <div><a class="btn btn-link pl-0" href="user-messages.html"><i class="fa fa-arrow-left mr-2"></i> Back to all messages</a></div>
+            <div><a class="btn btn-link pl-0" href="{{ path('inbox', {'lang': lang}) }}"><i class="fa fa-arrow-left mr-2"></i> Back to all messages</a></div>
         </div>
 
         <!-- Chat Box-->
+        {% for item in dataR %}
+
         <div class="px-4 py-5">
             <div class="row">
-                <!-- Sender Message-->
-                <div class="media col-md-9 col-xl-7 mb-3"><img class="avatar avatar-border-white" src="img/avatar/avatar-1.jpg" alt="user">
-                    <div class="media-body ml-3">
-                        <div class="bg-gray-200 rounded p-4 mb-2">
-                            <p class="text-sm mb-0">One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections</p>
-                        </div>
-                        <p class="small text-muted ml-3">12:00 PM | Aug 13</p>
-                    </div>
-                </div>
                 <!-- Reciever Message-->
                 <div class="media col-md-9 col-xl-7 ml-auto mb-3">
                     <div class="media-body mr-3">
                         <div class="bg-primary rounded p-4 mb-2">
-                            <p class="text-sm mb-0 text-white">The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. &quot;What's happened to me?&quot; he thought. It wasn't a dream.</p>
+                            <p class="text-sm mb-0 text-white">{{ item.message }}</p>
                         </div>
-                        <p class="small text-muted ml-3">12:00 PM | Aug 13</p>
-                    </div><img class="avatar avatar-border-white" src="img/avatar/avatar-10.jpg" alt="user">
+                        <p class="small text-muted ml-3">{{ item.createdAt.format('j:m:a')}}</p>
+                    </div><img class="avatar avatar-border-white" src="{{ asset('img/avatar/avatar-10.jpg') }}" alt="user">
                 </div>
+                {% endfor %}
+                {% for item in dataS %}
                 <!-- Sender Message-->
-                <div class="media col-md-9 col-xl-7 mb-3"><img class="avatar avatar-border-white" src="img/avatar/avatar-1.jpg" alt="user">
+                <div class="media col-md-9 col-xl-7 mb-3"><img class="avatar avatar-border-white" src="{{ asset('img/avatar/avatar-1.jpg') }}" alt="user">
                     <div class="media-body ml-3">
                         <div class="bg-gray-200 rounded p-4 mb-2">
-                            <p class="text-sm mb-0">His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table.</p>
+                            <p class="text-sm mb-0">{{ item.message }}</p>
                         </div>
-                        <p class="small text-muted ml-3">12:00 PM | Aug 13</p>
+                        <p class="small text-muted ml-3">{{ item.createdAt.format('j:m:a')}}</p>
                     </div>
                 </div>
-                <!-- Reciever Message-->
-                <div class="media col-md-9 col-xl-7 ml-auto mb-3">
-                    <div class="media-body mr-3">
-                        <div class="bg-primary rounded p-4 mb-2">
-                            <p class="text-sm mb-0 text-white">Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame.</p>
-                        </div>
-                        <p class="small text-muted ml-3">12:00 PM | Aug 13</p>
-                    </div><img class="avatar avatar-border-white" src="img/avatar/avatar-10.jpg" alt="user">
-                </div>
-                <!-- Sender Message-->
-                <div class="media col-md-9 col-xl-7 mb-3"><img class="avatar avatar-border-white" src="img/avatar/avatar-1.jpg" alt="user">
-                    <div class="media-body ml-3">
-                        <div class="bg-gray-200 rounded p-4 mb-2">
-                            <p class="text-sm mb-0">He must have tried it a hundred times, shut his eyes so that he wouldn't have to look at the floundering legs, and only stopped when he began to feel a mild, dull pain there that he had never felt before.</p>
-                        </div>
-                        <p class="small text-muted ml-3">12:00 PM | Aug 13</p>
-                    </div>
-                </div>
-                <!-- Reciever Message-->
-                <div class="media col-md-9 col-xl-7 ml-auto mb-3">
-                    <div class="media-body mr-3">
-                        <div class="bg-primary rounded p-4 mb-2">
-                            <p class="text-sm mb-0 text-white">One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections</p>
-                        </div>
-                        <p class="small text-muted ml-3">12:00 PM | Aug 13</p>
-                    </div><img class="avatar avatar-border-white" src="img/avatar/avatar-10.jpg" alt="user">
-                </div>
+                {% endfor %}
             </div>
         </div>
+
         <!-- Typing area-->
-        <form class="bg-light rounded shadow-sm" action="#">
+        {{ form_start(form,{'attr': {'novalidate': 'novalidate'}} ) }}
+        {{ form_errors(form.message) }}
+        {{ form_widget(form.message,{"attr":{"class":"form-control border-0 p-4 bg-light text-sm"}}) }}
+
             <div class="input-group">
-                <textarea class="form-control border-0 p-4 bg-light text-sm" placeholder="Type a message" aria-describedby="button-sendMessage"></textarea>
+
                 <div class="input-group-append">
-                    <button class="btn btn-link" id="button-sendMessage" type="submit"><i class="fa fa-paper-plane"></i></button>
+                    {{ form_widget(form.envoyer,{"attr":{"class":"btn btn-link"}}) }}
+
                 </div>
             </div>
-        </form>
+
     </div>
 </section>
 
