--- a/templates/Front/comment/new.html.twig
+++ b/templates/Front/comment/new.html.twig
@@ -7,12 +7,12 @@
         <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h4 style="color:#FFA500"  class="card-title">Ajouter Voyage</h4>
+                    <h4 style="color:#FFA500"  class="card-title">Ajouter comment</h4>
 
-    {{ include('Front/voyage/_form.html.twig') }}
+    {{ include('Front/comment/_form.html.twig') }}
 
 
-    <a href="{{ path('voyage') }}">Retour à la liste</a>
+    <a href="{{ path('comment') }}">Retour à la liste</a>
                 </div>
             </div>
         </div>
