--- a/templates/Front/Forum/inbox.html.twig
+++ b/templates/Front/Forum/inbox.html.twig
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{% extends "Front/Forum/base.html.twig" %}
+{% block head %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Directory Theme by Bootstrapious</title>
@@ -8,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
     <!-- Price Slider Stylesheets -->
-    <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
+    <link rel="stylesheet" href="{{ asset('vendor/nouislider/nouislider.css') }}">
     <!-- Google fonts - Playfair Display-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700">
     <!-- Google fonts - Poppins-->
@@ -16,117 +15,71 @@
     <!-- swiper-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/css/swiper.min.css">
     <!-- Magnigic Popup-->
-    <link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.css">
+    <link rel="stylesheet" href="{{ asset('vendor/magnific-popup/magnific-popup.css') }}">
     <!-- theme stylesheet-->
-    <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="{{ asset('css/style.default.css') }}" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="{{ asset('css/custom.css') }}">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="{{ asset('img/favicon.png') }}">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
     <!-- Font Awesome CSS-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-</head>
-<body style="padding-top: 72px;">
-<header class="header" style="padding-top: 72px;">
-    <!-- Navbar-->
-    <nav class="navbar navbar-expand-lg fixed-top shadow navbar-light bg-white">
-        <div class="container-fluid">
-            <div class="d-flex align-items-center"><a class="navbar-brand py-1" href="{{ path('home') }}"><img class="logo"
-                                                                                                               src="{{ asset('img/logo_eventum.svg') }}" alt="Directory logo"></a>
-                <form class="form-inline d-none d-sm-flex" action="#" id="search">
-                    <div class="input-label-absolute input-label-absolute-left input-reset input-expand ml-lg-2 ml-xl-3">
-                        <label class="label-absolute" for="search_search"><i class="fa fa-search"></i><span
-                                    class="sr-only">What are you looking for?</span></label>
-                        <input class="form-control form-control-sm border-0 shadow-0 bg-gray-200"
-                               id="search_search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-reset btn-sm" type="reset"><i class="fa-times fas"></i></button>
-                    </div>
-                </form>
-            </div>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                    data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                    aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
-            <!-- Navbar Collapse -->
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <form class="form-inline mt-4 mb-2 d-sm-none" action="#" id="searchcollapsed">
-                    <div class="input-label-absolute input-label-absolute-left input-reset w-100">
-                        <label class="label-absolute" for="searchcollapsed_search"><i
-                                    class="fa fa-search"></i><span
-                                    class="sr-only">What are you looking for?</span></label>
-                        <input class="form-control form-control-sm border-0 shadow-0 bg-gray-200"
-                               id="searchcollapsed_search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-reset btn-sm" type="reset"><i class="fa-times fas"> </i></button>
-                    </div>
-                </form>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown ml-lg-3"><a id="userDropdownMenuLink" href="#"
-                                                             data-toggle="dropdown" aria-haspopup="true"
-                                                             aria-expanded="false"> <img
-                                    class="avatar avatar-sm avatar-border-white mr-2"
-                                    src="{{ asset('img/avatar/avatar-10.jpg') }}" alt="Jack London"></a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdownMenuLink"><a
-                                    class="dropdown-item" href="{{ path('error') }}">Profile
-                            </a><a class="dropdown-item" href="{{ path('error') }}">Dark Mode
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{{ path('error') }}"><i
-                                        class="fas fa-sign-out-alt mr-2 text-muted"></i> Sign out</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="nav-link " id="homeDropdownMenuLink"
-                                                     href="index.html"
-                                                     data-toggle="dropdown" aria-haspopup="true"
-                                                     aria-expanded="false">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                 class="bi bi-translate" viewBox="0 0 16 16">
-                                <path d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"/>
-                                <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"/>
-                            </svg>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="homeDropdownMenuLink">
-                            <a class="dropdown-item" href="index.html">English<span><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                            fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16">
-  <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
-  <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
-</svg></span></a>
-                            <a class="dropdown-item" href="index-2.html">Frensh</a>
-                            <a class="dropdown-item" href="index-3.html">Add language</a>
-                            <a class="dropdown-item" href="index-4.html">See all Language
-                            </a>
+    <script>
+        // ------------------------------------------------------- //
+        //   Inject SVG Sprite -
+        //   see more here
+        //   https://css-tricks.com/ajaxing-svg-sprite/
+        // ------------------------------------------------------ //
+        function injectSvgSprite(path) {
 
-                        </div>
-                    </li>
+            var ajax = new XMLHttpRequest();
+            ajax.open("GET", path, true);
+            ajax.send();
+            ajax.onload = function(e) {
+                var div = document.createElement("div");
+                div.className = 'd-none';
+                div.innerHTML = ajax.responseText;
+                document.body.insertBefore(div, document.body.childNodes[0]);
+            }
+        }
+        // to avoid CORS issues when viewing using file:// protocol, using the demo URL for the SVG sprite
+        // use your own URL in production, please :)
+        // https://demo.bootstrapious.com/directory/1-0/icons/orion-svg-sprite.svg
+        //- injectSvgSprite('${path}icons/orion-svg-sprite.svg');
+        injectSvgSprite('https://demo.bootstrapious.com/directory/1-4/icons/orion-svg-sprite.svg');
 
-                    <li class="nav-item"><a class="nav-link" href="{{ path('inbox') }}">Messages</a>
-                    </li>
+    </script>
+    <!-- jQuery-->
+    <script src="{{ asset('vendor/jquery/jquery.min.js')}}"></script>
+    <!-- Bootstrap JS bundle - Bootstrap + PopperJS-->
+    <script src="{{ asset('vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <!-- Magnific Popup - Lightbox for the gallery-->
+    <script src="{{ asset('vendor/magnific-popup/jquery.magnific-popup.min.js') }}"></script>
+    <!-- Smooth scroll-->
+    <script src="{{ asset('vendor/smooth-scroll/smooth-scroll.polyfills.min.js') }}"></script>
+    <!-- Bootstrap Select-->
+    <script src="{{ asset('vendor/bootstrap-select/js/bootstrap-select.min.js') }}"></script>
+    <!-- Object Fit Images - Fallback for browsers that don't support object-fit-->
+    <script src="{{ asset('vendor/object-fit-images/ofi.min.js') }}"></script>
+    <!-- Swiper Carousel                       -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js"></script>
+    <script>var basePath = ''</script>
+    <!-- Main Theme JS file    -->
+    <script src="{{ asset('js/theme.js') }}"></script>
+{% endblock %}
+{% block content %}
+    {{ parent() }}
 
-                    <!-- Megamenu-->
 
-                    <!-- /Megamenu end
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
-                    </li>
--->
-                    <li class="nav-item"><a class="nav-link" href="#">Bookmarks</a>
-                    </li>
-
-                    <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block"><a
-                                class="btn btn-primary" href="{{ path('addFSt') }}">Start New Topic</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- /Navbar -->
-</header>
 <section class="py-5">
     <div class="container">
         <!-- Breadcrumbs -->
         <ol class="breadcrumb pl-0  justify-content-start">
             <li class="breadcrumb-item"><a href="{{ path('home') }}">Home</a></li>
-            <li class="breadcrumb-item"><a href="{{ path('forum') }}">Forum</a></li>
+            <li class="breadcrumb-item"><a href="{{ path('inbox', {'lang': lang}) }}') }}">Forum</a></li>
             <li class="breadcrumb-item active">Messages   </li>
         </ol>
         <div class="d-flex justify-content-between align-items-center mb-5">
@@ -169,7 +122,7 @@
                             </div>
                             <div class="col-md-4 text-right py-3">
                                 <p class="text-sm">February 16, 2019</p>
-                            </div><a class="stretched-link" href="{{ path('discussion') }}"></a>
+                            </div><a class="stretched-link" href="{{ path('discussion', {'lang': lang}) }}"></a>
                         </div>
                     </div>
                 </div>
@@ -297,117 +250,6 @@
         </div>
     </div>
 </section>
-<!-- Footer-->
-<footer class="position-relative z-index-10 d-print-none">
-    <!-- Main block - menus, subscribe form-->
-    <div class="py-6 bg-gray-200 text-muted">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <div class="font-weight-bold text-uppercase text-dark mb-3">Directory</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                    <ul class="list-inline">
-                        <li class="list-inline-item"><a class="text-muted text-hover-primary" href="#" target="_blank" title="twitter"><i class="fab fa-twitter"></i></a></li>
-                        <li class="list-inline-item"><a class="text-muted text-hover-primary" href="#" target="_blank" title="facebook"><i class="fab fa-facebook"></i></a></li>
-                        <li class="list-inline-item"><a class="text-muted text-hover-primary" href="#" target="_blank" title="instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li class="list-inline-item"><a class="text-muted text-hover-primary" href="#" target="_blank" title="pinterest"><i class="fab fa-pinterest"></i></a></li>
-                        <li class="list-inline-item"><a class="text-muted text-hover-primary" href="#" target="_blank" title="vimeo"><i class="fab fa-vimeo"></i></a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
-                    <h6 class="text-uppercase text-dark mb-3">Rentals</h6>
-                    <ul class="list-unstyled">
-                        <li><a class="text-muted" href="index.html">Rooms     </a></li>
-                        <li><a class="text-muted" href="category-rooms.html">Map on top     </a></li>
-                        <li><a class="text-muted" href="category-2-rooms.html">Side map     </a></li>
-                        <li><a class="text-muted" href="category-3-rooms.html">No map     </a></li>
-                        <li><a class="text-muted" href="detail-rooms.html">Room detail     </a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
-                    <h6 class="text-uppercase text-dark mb-3">Pages</h6>
-                    <ul class="list-unstyled">
-                        <li><a class="text-muted" href="compare.html">Comparison                                   </a></li>
-                        <li><a class="text-muted" href="team.html">Team                                   </a></li>
-                        <li><a class="text-muted" href="contact.html">Contact                                   </a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-4">
-                    <h6 class="text-uppercase text-dark mb-3">Daily Offers & Discounts</h6>
-                    <p class="mb-3"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>
-                    <form action="#" id="newsletter-form">
-                        <div class="input-group mb-3">
-                            <input class="form-control bg-transparent border-dark border-right-0" type="email" placeholder="Your Email Address" aria-label="Your Email Address">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-dark border-left-0" type="submit"> <i class="fa fa-paper-plane text-lg"></i></button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copyright section of the footer-->
-    <div class="py-4 font-weight-light bg-gray-800 text-gray-300">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 text-center text-md-left">
-                    <p class="text-sm mb-md-0">&copy; 2020, Your company.  All rights reserved.</p>
-                </div>
-                <div class="col-md-6">
-                    <ul class="list-inline mb-0 mt-2 mt-md-0 text-center text-md-right">
-                        <li class="list-inline-item"><img class="w-2rem" src="img/visa.svg" alt="..."></li>
-                        <li class="list-inline-item"><img class="w-2rem" src="img/mastercard.svg" alt="..."></li>
-                        <li class="list-inline-item"><img class="w-2rem" src="img/paypal.svg" alt="..."></li>
-                        <li class="list-inline-item"><img class="w-2rem" src="img/western-union.svg" alt="..."></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- JavaScript files-->
-<script>
-    // ------------------------------------------------------- //
-    //   Inject SVG Sprite -
-    //   see more here
-    //   https://css-tricks.com/ajaxing-svg-sprite/
-    // ------------------------------------------------------ //
-    function injectSvgSprite(path) {
 
-        var ajax = new XMLHttpRequest();
-        ajax.open("GET", path, true);
-        ajax.send();
-        ajax.onload = function(e) {
-            var div = document.createElement("div");
-            div.className = 'd-none';
-            div.innerHTML = ajax.responseText;
-            document.body.insertBefore(div, document.body.childNodes[0]);
-        }
-    }
-    // to avoid CORS issues when viewing using file:// protocol, using the demo URL for the SVG sprite
-    // use your own URL in production, please :)
-    // https://demo.bootstrapious.com/directory/1-0/icons/orion-svg-sprite.svg
-    //- injectSvgSprite('${path}icons/orion-svg-sprite.svg');
-    injectSvgSprite('https://demo.bootstrapious.com/directory/1-4/icons/orion-svg-sprite.svg');
 
-</script>
-<!-- jQuery-->
-<script src="vendor/jquery/jquery.min.js"></script>
-<!-- Bootstrap JS bundle - Bootstrap + PopperJS-->
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- Magnific Popup - Lightbox for the gallery-->
-<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-<!-- Smooth scroll-->
-<script src="vendor/smooth-scroll/smooth-scroll.polyfills.min.js"></script>
-<!-- Bootstrap Select-->
-<script src="vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
-<!-- Object Fit Images - Fallback for browsers that don't support object-fit-->
-<script src="vendor/object-fit-images/ofi.min.js"></script>
-<!-- Swiper Carousel                       -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js"></script>
-<script>var basePath = ''</script>
-<!-- Main Theme JS file    -->
-<script src="js/theme.js"></script>
-</body>
-</html>
+{% endblock %}
